--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Universitätsstr. 12 · 45141 Essen · 0201 183-5234 ·
                         <a href="mailto:joel.guttke@uni-due.de">joel.guttke@uni-due.de</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Ich bin Promotionsstudent in der Didaktik des Englischen an der Universität Duisburg-Essen. Meine Forschung ist an der Schnittstelle von Fremdsprachenforschung und Empirischer Bildungsforschung verortet, da ich mich für Unterrichtsqualität von Englischunterricht interessiere.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://twitter.com/keepitcajoel"><i class="fab fa-twitter"></i></a>
                     </div>
